===========

- @version-full@ (@release-date@)
    - Bugs fixed
        - Fixed generation of Atom document.
          Reported by Bedwyr Humphreys.
        - Issue with line breaks that were removed when PUTting 
          a file. Contributed by Daniel Truemper.
        - Precondition check was wrong for 'if-unmodified-since' if
          dates were equals. Reported by Andreas Schneider.

- 1.1.7 (2009-11-20)
    - Bugs fixed
        - Some Jetty parameters (maxThreads, etc.) had to be set at the
          connector creation time instead. Now they only need to be set
          at start time. Reported by Avi Flax.
        - Fixed issue with Grizzly Maven artifact ID. 
          Reported by Daniel Peters.
        - Fixed issue with TransformRepresentation which should not use 
          XMLFilter in getSaxSource(). Contributed by Warren Janssens.
        - Fixed bug in hours formatting in text elements of Atom feeds.
          Reported by Moisei Rabinovich.
        - Fixed potential NPE in ContentType.
          Reported by Eugeniy Chemezov. 
        - Fixed bug in engine causing "connectTimeout" property to 
          always be zero, for all connectors. 
          Reported by Evgeny Shepelyuk.
        - Fixed bug in internal HTTP client causing "connectTimeout"
          property on Client to be ignored. Reported by Rahul Juneja.
        - Fixed bug in Apache HTTP client causing "connectTimeout"
          property on Client to be ignored. Reported by Jim Alateras.
        - PUT with empty entities were causing 400 errors. The test
          in Resource has been removed. 
          Reported by Nicolas Rinaudo and Rhett Sutphin
        - Fixed bug in InputEntityStream causing issue with mark/reset
          logic. Reported by Arjohn Kampman.
        - Fixed bug that generates WADL documentation with wrong base 
          ref. Reported by Carsten Lohmann.
        - Updated the response with all ChallengeRequests sent by the 